Closed
Bug 98654
Opened 23 years ago
Closed 23 years ago
yahoo.com Pop-up ads appear blank
Categories
(Core :: DOM: Core & HTML, defect, P1)
Core
DOM: Core & HTML
Tracking
()
VERIFIED
FIXED
mozilla1.0
People
(Reporter: rituraj_tiwari, Assigned: jst)
References
()
Details
(Keywords: topembed+, Whiteboard: [HAVE FIX][FIXED ON TRUNK][adt1][m5+] [ETA 04/29])
Attachments
(2 files)
561 bytes,
text/html
|
Details | |
3.36 KB,
patch
|
bzbarsky
:
review+
jst
:
superreview+
asa
:
approval+
|
Details | Diff | Splinter Review |
Seen on build Id 2001090603:
The pop-under ad window on the URL above comes up blank (not that I mind not
seeing ads). Since this ad is displayed only once over a certain period, the Y!
cookie needs to be cleared out in order to reproduce the problem.
-Tiwari
Updated•23 years ago
|
Summary: Pop-under ads don't show up → Pop-under ads appears blank
Comment 1•23 years ago
|
||
Reporter Is this a problem with 0.9.4 or later ?
Reporter | ||
Comment 2•23 years ago
|
||
Still broken on build 2001100708
-Tiwari
Comment 3•23 years ago
|
||
confirming with win2k build 20011008..
-> Dom0 (?)
Assignee: asa → jst
Status: UNCONFIRMED → NEW
Component: Browser-General → DOM Level 0
Ever confirmed: true
QA Contact: doronr → desale
Comment 4•23 years ago
|
||
*** Bug 107811 has been marked as a duplicate of this bug. ***
Comment 5•23 years ago
|
||
Copied from my dupe bug. I emailed Yahoo but it would nice to know where the bug
lies:
Go to http://movies.yahoo.com or http://weather.yahoo.com (Note: They do not
serve the ads after a certain amount of accesses...not sure
if within a session or a time period, so you'd need to clear the cookies...I
think, if you need to replicate multiple times in a short time period.)
Result:
The pop up window is supposed to have ad content.
1) The status bar says "connecting to rd.yahoo.com" yet the page never loads
2) The popup is blank but source has
<html><body></body></html>
Replicatability:
80% of the time.
This occurs no matter what my connection speed, using Gecko/20011019.
Replicated on Win 2000 and Win 98.
Assignee | ||
Comment 6•23 years ago
|
||
I saw this too the one time I got a popup ad from one of the yahoo sites, but I
didn't get one again so I couldn't track it down further...
Comment 7•23 years ago
|
||
Found another example:
1. go to americangreetings.com
2. Click "funny" under the Birthday category
Result: Popup ad from ads.x10.com is blank
To replicate you have to delete your cookies (or some amount of time has to pass
before it pops up again...not sure of their method).
Comment 8•23 years ago
|
||
I emailed Yahoo again to see if they can figure out what the problem is.
Comment 9•23 years ago
|
||
Added Yahoo to summary line; is this not an evang issue until proven otherwise
or is it a known product issue? If evang please recategorize.
Summary: Pop-under ads appears blank → WWW.YAHOO.COM Pop-up ads appear blank
Comment 10•23 years ago
|
||
***Need someone to look at this*** to know if it is an evangelism issue or not.
Still occurs on all recent builds. This time on games.yahoo.com the source code
of the blank popup is: <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01
Transitional//EN"><html><head><title></title></head><body></body></html>
The status bar is always left at "Connecting to rd.yahoo.com"
I have emailed Yahoo customer service twice about this but have not directly
spoken to them until we know where the issue may lie.
Reporter | ||
Comment 11•23 years ago
|
||
Here is the part I don't get: If this works with IE and does not work with
Mozilla, why would it be a Yahoo bug? Unless of course they are sending the
page in a non-stanards-compliant way which I am sure can be easily verified if
such is the case. I can't understand how Y! customer service can help in this
matter at all?
-Tiwari
Comment 12•23 years ago
|
||
In case it is the case that "Unless of course they are sending the page in a
non-stanards-compliant way" or that the content is being served in a non
compliant way. (I'm not technical enough to know but posed it as a possibility.)
Reporter | ||
Comment 13•23 years ago
|
||
I am really not familiar with the Mozilla bug process but shouldn't the engineer
assigned to this bug (JST) be trying to access the pop-under pages using a tool
like wget or such to find out where the problem lies? I still don't see how Y!
customer service will help. You guys can reproduce this problem in house and if
its a Y! issue, you let them know.
-Tiwari
Assignee | ||
Comment 14•23 years ago
|
||
Yes, I should be doing something like that, and I will be doing something like
that once I get there. This problem is just not close to the top of my list of
things to do yet. Not sure when I'll get to it. Any help of any kind is greatly
appreciated, as always.
Comment 15•23 years ago
|
||
perhaps related to bug 103757
Comment 16•23 years ago
|
||
when I go to movies.yahoo.com and the popup comes up:
1) still is blank with "Sending request to rd.yahoo.com" in the bottom status bar
2) the address bar in the popup window says wyciwyg://1//
3) the source code only has </head><body></body></html>
Reload does not cause the ad content to load.
Build Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:0.9.8+) Gecko/20020213
Comment 17•23 years ago
|
||
There is going to be a flood of similar, often hard to analyse cases where pages
do not load, due to the new "wyciwyg://" URL scheme - or not.
I feel sorry for the Netscape engineers who are asked to respond to the failures
of these cases without participation of the website's designers.
I would personally not waste any time on this particular case yet.
I am in charge of a multitude of web sites where Mozilla definitely fails
completely and for the single cause of a tiny side effect of this new scheme.
I have a created a testcase that pinpoints exactly what the problem is.
Before trying to analyse this problem on multiple other sites, I am suggesting
to reap the benefits of the analysis that has been done already.
Please refer to the testcase in bug 125003.
I am confident that a lot of these "wyciwyg://" problems whether they are
diagnosed as such or not will disappear after bug 125003 is fixed.
IMHO this bug is a big and critical thing and a lot of unnecessary work can be
saved by fixing it asap.
Comment 18•23 years ago
|
||
Severity = MEDIUM [No Crash, functional failure is there, Can Result in Cosmetic
failure too]
Visibility = HIGH [Great deal of real world website usage, Gets one point of
compatibility with other browsers since it works on other browsers. gets one
more point on compliance with adopted techonology, that is JS]
Priority = Visibility * Severity
Priority = p2
But since lot of visibility is there, given that pop-up ads apear blank, pushing
it up one more step.
Priority = p1
if someone feels otherwise then please investigate this more & feel free to
change this priority.
Priority: -- → P1
Comment 19•23 years ago
|
||
cc'ing mgalli to add more info.
He has identified the exact bug, and has gotten a workaround to Yahoo.
Assignee | ||
Comment 20•23 years ago
|
||
mgalli, if you know anything more about this, would you explain what the deal is
here? Thanks.
Comment 21•23 years ago
|
||
*** Bug 129729 has been marked as a duplicate of this bug. ***
Comment 22•23 years ago
|
||
Hi Johnny,
I don't know if this case have more issues (it's sort of confuse), but here is
the thing I found: I filed bug 129729 which have a simple testcase for one
problem I found there.
The yahoo code is using JS to:
1) Create a new window
2) document write (into the new window) CONTENT.
3) CONTENT is mostly JS window.location="http://somepage".
The results are:
window.location is not working.
The workaround is:
in step 3), script window.location inside one function and call the function in
the onload event.
Comment 23•23 years ago
|
||
removed capitals from summary -
can we confirm, is this a evang bug, or is gecko being a naughty lizard?
Summary: WWW.YAHOO.COM Pop-up ads appear blank → yahoo.com Pop-up ads appear blank
Comment 24•23 years ago
|
||
Yahoo's trying to implement a fix in their code, but marked this
topembed/nsbeta1 with hopes of someone looking at if this is a bug.
Comment 25•23 years ago
|
||
Let me see if I can come up with anything. This is an area where web authors
have a very difficult time. Comment #22 is interesting and it indicates to me
that the Yahoo authors are facing a dilemma.
I have been familiar with an IE issue that is as old as the browser itself.
The Yahoo code is probably partly a workaround for this.
In all versions of IE, the js code "window.open()" does not block and in 5-10%
of all cases IE gets js security errors on attempts to access ANY properties of
the new window simply because the returned window object is not ready. Setting
window.location on a pup-under window is probably not an easy thing to do
cross-platform. I have seen this on other sites also not only Yahoo.
If Netscape declares this an evangelism issue or does not fix this then the
perception in business people who make a living with web based applications will
grow that their business can be destroyed by a new browser release at any time.
The options they are looking at times are flash, downloadable code such as java
web start, curl, IE-only etc.
So far, Nescape has been a very good citizen in the area of window handling and
I am not aware of any major bug in version 4 but what worries me is this bug
and much more seriously bug 131841. Those things did not exist in Netscape
version 3 and 4.
Assignee | ||
Updated•23 years ago
|
Target Milestone: --- → mozilla1.0
Assignee | ||
Comment 26•23 years ago
|
||
I've been trying to see what the problem really is here and it's extremely hard
to debug this since getting yahoo.com to show those popups more than once or
twice is really hard, removing cookies n' all that doesn't help. I'm kinda stuck
here, I think I have an idea about why this doesn't work, and I would love to
fix this for mozilla1.0, but I'd really appreciate some debugging aid here.
Ideally someone would know of a site that shows this same problem every time
it's loaded, that would help greatly.
Assignee | ||
Comment 27•23 years ago
|
||
Comment 28•23 years ago
|
||
Comment 29•23 years ago
|
||
See http://bugscape.netscape.com/show_bug.cgi?id=12237 and
http://bugscape.netscape.com/show_bug.cgi?id=12817 for examples of sites
suffering from this problem.
Assignee | ||
Comment 30•23 years ago
|
||
Updated•23 years ago
|
Comment 31•23 years ago
|
||
If anyone's able to test the fix on www.nfl.com on an embedded browser to see if
the site comes up (instead of being blank), that would be great.
Comment 32•23 years ago
|
||
Comment on attachment 77564 [details] [diff] [review]
This should fix this...
Why do you call htmldoc->EndLoad() again at the end of the termination
function? EndLoad() calls a function that calls EndLoad() again?
Assignee | ||
Comment 33•23 years ago
|
||
Comment on attachment 77564 [details] [diff] [review]
This should fix this...
Vidur says sr=vidur.
Attachment #77564 -
Flags: superreview+
Updated•23 years ago
|
Attachment #77564 -
Flags: review+
Comment 34•23 years ago
|
||
Comment on attachment 77564 [details] [diff] [review]
This should fix this...
r=bzbarsky
Comment 35•23 years ago
|
||
Johnny, please land this on the trunk. Following QA verification, mark with
keyword ADT1.0.0 and email adt@netscape.com requesting approval to land on the
branch.
Assignee | ||
Comment 36•23 years ago
|
||
Fix checked in on the trunk.
Status: NEW → ASSIGNED
OS: Windows NT → All
Hardware: PC → All
Whiteboard: [HAVE FIX][FIXED ON TRUNK]
Comment 37•23 years ago
|
||
Emailed adt to seek approval for checkin to branch.
Comment 38•23 years ago
|
||
gerardok - can you make sure this gets verified? prashant is on vacation.
Comment 39•23 years ago
|
||
[adt1]/nsbeta1+, as we need to serve up sites ads correctly.
Updated•23 years ago
|
Whiteboard: [HAVE FIX][FIXED ON TRUNK] [adt1] [Need a=] → [HAVE FIX][FIXED ON TRUNK] [adt1][m5+] [Need a=]
Comment 40•23 years ago
|
||
Comment on attachment 77564 [details] [diff] [review]
This should fix this...
a=asa (on behalf of drivers) for checkin to the 1.0 branch
Attachment #77564 -
Flags: approval+
Assignee | ||
Updated•23 years ago
|
Whiteboard: [HAVE FIX][FIXED ON TRUNK] [adt1][m5+] [Need a=] → [HAVE FIX][FIXED ON TRUNK][adt1][m5+]
Comment 41•23 years ago
|
||
Verified fix checked in CVS (rev 3.422),the above testcase and valid URL's in
this bugs passes in the build ID on 2002042209(trunk) using winXp
Comment 42•23 years ago
|
||
Sounds like this has been verified by QA on the trunk. If yes, pls Verify this
one as Fixed.
adt1.0.0+ (on ADT's behalf) approval for checkin to the 1.0 branch. Pls check
this in today, then add fixed1.0.0 keyword.
Keywords: adt1.0.0+
Whiteboard: [HAVE FIX][FIXED ON TRUNK][adt1][m5+] → [HAVE FIX][FIXED ON TRUNK][adt1][m5+] [ETA 04/29]
Assignee | ||
Comment 43•23 years ago
|
||
Fixed on the branch now too.
Comment 44•23 years ago
|
||
Verified fixed in Gecko/20020507
(Yahoo popup that was previously blank now shows the ad)
Assignee | ||
Comment 45•23 years ago
|
||
*** Bug 55213 has been marked as a duplicate of this bug. ***
Comment 46•23 years ago
|
||
verified1.0.0 on 05-22-18-1.0.0 & also Verified on trunk on 05-23-08-trunk.
Status: RESOLVED → VERIFIED
Keywords: verified1.0.0
You need to log in
before you can comment on or make changes to this bug.
Description
•