Fixing bug 98654. Make document.write() not cancel earlier location.href=...'s when both are done from the same script. r=bzbarsky@mit.edu, sr=vidur@netscape.com